--- a/Proyecto01/contenedores/cubos/cuboazul.html
+++ b/Proyecto01/contenedores/cubos/cuboazul.html
@@ -9,7 +9,7 @@
 <body style="background-image: url(./imagen/fondoAzul.jpeg);">
 
 <div class="imagen" id="centrado">
-    <img src="./imagen/PortalAzul.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalAzul.jpg" alt="imagen cubos" width="100%" height="100%"/>
    
 </div>
 <div class="frase" id="centrado">
