enlazar cubos con principal

--- a/Proyecto01/contenedores/cubos/cuboverde.html
+++ b/Proyecto01/contenedores/cubos/cuboverde.html
@@ -8,8 +8,14 @@
 </head>
 <body style="background-image: url(./imagen/fondoVerde.jpg);">
 
+<div class="volver"> 
+    <a href="../contenedores.html">
+        <img src="./imagen/flechaAtras1.png" alt="imagen cubos" width="100%" height="100%" />
+    </a>
+</div>    
+
 <div class="imagen" id="centrado">
-    <img src="./imagen/PortalVerde.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalVerde.jpg" alt="imagen cubos" width="100%" height="100%" />
    
 </div>
 <div class="frase" id="centrado">
