--- a/Proyecto01/contenedores/cubos/cuboazul.html
+++ b/Proyecto01/contenedores/cubos/cuboazul.html
@@ -8,6 +8,12 @@
 </head>
 <body style="background-image: url(./imagen/fondoAzul.jpeg);">
 
+<div class="volver"> 
+    <a href="../contenedores.html">
+        <img src="./imagen/flechaAtras1.png" alt="imagen cubos" width="100%" height="100%" />
+    </a>
+</div>
+
 <div class="imagen" id="centrado">
     <img src="./imagen/PortalAzul.jpg" alt="imagen cubos" width="100%" height="100%"/>
    
