--- a/Proyecto01/contenedores/cubos/cuboropa.html
+++ b/Proyecto01/contenedores/cubos/cuboropa.html
@@ -10,7 +10,7 @@
 <body style="background-image: url(./imagen/FondoRopa.jpg);">
 
 <div class="volver"> 
-    <a href="">
+    <a href="../contenedores.html">
         <img src="./imagen/flechaAtras1.png" alt="imagen cubos" width="100%" height="100%" />
     </a>
 </div>
