--- a/Proyecto01/contenedores/cubos/punto_aceite.html
+++ b/Proyecto01/contenedores/cubos/punto_aceite.html
@@ -8,8 +8,14 @@
 </head>
 <body style="background-image: url(./imagen/FondoAceite.jpg); background-repeat: no-repeat; background-size: 100%;">
 
+<div class="volver"> 
+    <a href="../contenedores.html">
+        <img src="./imagen/flechaAtras1.png" alt="imagen cubos" width="100%" height="100%" />
+    </a>
+</div>
+
 <div class="imagen" id="centrado">
-    <img src="./imagen/PortalAceite1.jpg" alt="imagen cubos" width="1200" height="350" />
+    <img src="./imagen/PortalAceite1.jpg" alt="imagen cubos" width="100%" height="100%" />
    
 </div>
 <div class="frase" id="centrado">
