enlazar cubo nrgro

--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -48,8 +48,9 @@
             <img src="../img/cuborojo.png" alt="contenedor rojo" />
         </a>
 
-        <img src="../img/cubonegro.png" alt="contenedor negro" />
-
+        <a href="./cubos/cuboropa.html">
+            <img src="../img/cubonegro.png" alt="contenedor negro" />
+        </a>
     </div>
 <!-- boton para volver a inicio -->
     
