--- a/Proyecto01/contenedores/cubos/punto_aceite.html
+++ b/Proyecto01/contenedores/cubos/punto_aceite.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./CSS/aceite.css">
     <title>Contenedor restos de residuos</title>
 </head>
-<body style="background-image: url(./imagen/FondoAceite.jpg); background-repeat: no-repeat; background-size: 100%;">
+<body style="background-image: url(./imagen/FondoAceite.jpg); ">
 
 <div class="volver"> 
     <a href="../contenedores.html">
