--- a/Proyecto01/contenedores/cubos/cubogris.html
+++ b/Proyecto01/contenedores/cubos/cubogris.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./CSS/azul.css">
     <title>Contenedor restos de residuos</title>
 </head>
-<body style="background-image: url(./imagen/FondoGris.jpeg); background-repeat: no-repeat; background-size: 100%;">
+<body style="background-image: url(./imagen/FondoGris.jpeg); background-repeat: repeat;">
 
 <div class="volver"> 
         <a href="../contenedores.html">
