--- a/Proyecto01/contenedores/contenedores.html
+++ b/Proyecto01/contenedores/contenedores.html
@@ -20,9 +20,9 @@
         <h1>contenedores</h1>
     </header>
     <div class="contenedores1">
-
+        <a href="./cubos/cuboamarillo.html">
         <img src="../img/cuboamarillo.png" alt="contenedor amarillo" />
-
+        </a>
         <a href="./cubos/cuboverde.html">
             <img src="../img/cuboverde.png" alt="contenedor verde" />
         </a>
