--- a/Proyecto01/contenedores/cubos/cuboamarillo.html
+++ b/Proyecto01/contenedores/cubos/cuboamarillo.html
@@ -46,7 +46,14 @@
 <div class="no">
     <img src="./imagen/down.png" alt="sí" width="80" height="80" />
     <ul>
-        <li>Resto de residuos habituales</li>
+        <li>Juguetes de plástico</li>
+        <li>Biberones y chupetes</li>
+        <li>Utensilios de cocina</li>
+        <li>Cápsulas de aluminio de café</li>
+        <li>Moldes de silicona para cocinar</li>
+        <li>Cajas de CD's y DVD's</li>
+        <li>Monederos y carteras</li>
+        <li>Bolígrafos, sacapuntas, mecheros...</li>
         <p>Deben ir al contenedor correspondiente</p>
     
     </ul>  
