--- a/Proyecto01/formulario/formularioLogin.html
+++ b/Proyecto01/formulario/formularioLogin.html
@@ -27,7 +27,7 @@
         <input type="password" name="contraseña" id="contraseña" class="input"><br>
         <p>¿Has olvidado tu contraseña? Haz click aqui:</p>
 
-        <input type="button" value="Iniciar Sesion" name="boton" id="boton">
+        <a href="afterlogin.html"><input type="button" value="Iniciar Sesion" name="boton" id="boton"></a>
     </form>
     </div>
 </div>
