--- a/Proyecto01/formulario/afterlogin.html
+++ b/Proyecto01/formulario/afterlogin.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/cssLogin.css" type="text/css">
-    <title>Document</title>
+    <title>Document 2</title>
 </head>
 <body>
-    
+    <p>Inicio de sesion</p>
 </body>
 </html>
