--- a/Proyecto01/formulario/afterlogin.html
+++ b/Proyecto01/formulario/afterlogin.html
@@ -7,6 +7,9 @@
     <title>Document 2</title>
 </head>
 <body>
-    <p>Inicio de sesion</p>
+    <div id="cont">
+        <div id="titulo">
+    <h1>Inicio de sesion</h1><br><br>
+</div>
 </body>
 </html>
