--- a/Proyecto01/formulario/formularioRegister.html
+++ b/Proyecto01/formulario/formularioRegister.html
@@ -38,7 +38,7 @@
                 <label for="passwordRepeat">Introduce otra vez la contraseña</label><br>
                 <input type="password" name="passwordRepeat" id="passwordRepeat" class="input"><br>
 
-                <input type="button" value="Crear basuraCuenta" name="boton" id="boton">
+                <a href="afterregister.html"><input type="button" value="Crear basuraCuenta" name="boton" id="boton"></a>
 
             </form>
         </div>
