--- a/Proyecto01/formulario/afterlogin.html
+++ b/Proyecto01/formulario/afterlogin.html
@@ -10,6 +10,9 @@
     <div id="cont">
         <div id="titulo">
     <h1>Inicio de sesion</h1><br><br>
+    <div>
+        <img src="./img/usuario.png">
+    </div>
 </div>
 </body>
 </html>
