--- a/Proyecto01/formulario/afterregister.html
+++ b/Proyecto01/formulario/afterregister.html
@@ -10,6 +10,7 @@
     <div id="divGrande">
         <div id="titulo">
             <h1>Gracias por registrarte, recibirás un correo de confirmación en tu bandeja de entrada.</h1>
+            <img src="./img/registro.png" alt="imagen cubos" width="100%" height="100%">
         </div>
 </div>
 </body>
