--- a/Proyecto01/formulario/afterlogin.html
+++ b/Proyecto01/formulario/afterlogin.html
@@ -11,7 +11,7 @@
         <div id="titulo">
     <h1>Inicio de sesion</h1><br><br>
     <div>
-        <img src="./img/usuario.png" alt="imagen cubos" width="100%" height="100%">
+        <img src="./img/usuario2.png" alt="imagen cubos" width="100%" height="100%">
     </div>
 </div>
 </body>
