--- a/Proyecto01/contenedores/cubos/cuboamarillo.html
+++ b/Proyecto01/contenedores/cubos/cuboamarillo.html
@@ -18,15 +18,15 @@
    
 </div>
 <div class="frase" id="centrado">
-    <p>Dentro del contenedor amarillo, debemos depositar: botellas y envases de plástico, envases metálicos, briks y envases de madera
+    <p>Dentro del contenedor amarillo, debemos depositar: botellas y envases de plástico, envases metálicos, briks y envases.
  </p>
 </div>
 <br><br><br>
 <div class="si">
     <img src="./imagen/up.png" alt="sí" width="80" height="80" />
     <ul>
-        <li>Botellas de plástico</li><br>
-        <li>Latas de conserva y de bebidas</li><br>
+        <li>Botellas de plástico</li>
+        <li>Latas de conserva y de bebidas</li>
         <li>Tapas y tapones de plástico, metal y chapas</li>
         <li>Bandejas de aluminio</li>
         <li>Papel film y papel de aluminio</li>
