--- a/Proyecto01/formulario/afterlogin.html
+++ b/Proyecto01/formulario/afterlogin.html
@@ -11,7 +11,7 @@
         <div id="titulo">
     <h1>Inicio de sesion</h1><br><br>
     <div>
-        <img src="./img/usuario2.png" alt="usuario" width="40%" height="40%">
+        <img src="./img/login.png" alt="usuario" width="40%" height="40%">
     </div>
 </div>
 </body>
